# gludon

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: SquareObject.hpp  glShader.hpp  glTexture.hpp  glWindow.hpp  load_scripts.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: simple.frag  simple.vert
src/: SquareObject.cpp  glShader.cpp  glTexture.cpp  glWindow.cpp  load_scripts.cpp  main.cpp
